--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   input.initials{font-size:28px;text-transform:uppercase;letter-spacing:6px;width:140px;text-align:center;
     padding:8px 10px;border:2px solid #111;border-radius:10px;outline:none}
   .hint{font-size:12px;color:#444;margin-top:6px}
+  body { touch-action: manipulation; -webkit-tap-highlight-color: transparent; }
 </style>
 </head>
 <body>
