--- a/index.html
+++ b/index.html
@@ -26,25 +26,28 @@
   .hint{font-size:12px;color:#444;margin-top:6px}
   body { -webkit-tap-highlight-color: transparent; }
 
-  /* ——— Mobile layout: hide top bar during play to push canvas up ——— */
+/* Mobile: canvas fills the real visible height */
 @media (max-width: 768px){
-  #page{grid-template-rows:0 1fr;}
-  .board{display:none;}
+  /* Hide the top board during play; we’ll show a copy in Game Over */
+  #page{ grid-template-rows: 0 1fr; }
+  .board{ display:none; }
+
+  /* The height uses a JS-updated variable that matches the real viewport */
   canvas{
-    width:100vw;
-    height: calc(100vh - 20px); /* fit window height */
-    max-width:100%;
-    max-height:100%;
-    aspect-ratio:auto; /* allow flexible ratio */
+    width: 100vw;
+    height: calc(var(--app-vh, 100vh) - 16px);
+    max-width: 100%;
+    max-height: 100%;
+    aspect-ratio: auto;
   }
+
+  /* If overlays are taller than the screen, allow scrolling so buttons aren’t cut off */
   .overlay{
-    align-items:flex-start; /* allow scroll on small screens */
-    overflow:auto;
-    padding:20px 0;
+    align-items: flex-start;
+    overflow: auto;
+    padding: 16px 0;
   }
-  .card{
-    margin:auto;
-  }
+  .card{ margin: auto; }
 }
 </style>
 </head>
@@ -124,16 +127,31 @@ async function apiSaveScore(name, score){
 const canvas = document.getElementById('game');
 const ctx = canvas.getContext('2d', { alpha:true });
 let DPR = Math.max(1, Math.floor(window.devicePixelRatio || 1));
+// --- Real mobile viewport height -> CSS var --app-vh
+function setAppVh() {
+  const vh = (window.visualViewport ? window.visualViewport.height : window.innerHeight);
+  document.documentElement.style.setProperty('--app-vh', vh + 'px');
+}
+setAppVh();
+addEventListener('resize', setAppVh);
+addEventListener('orientationchange', setAppVh);
+if (window.visualViewport) window.visualViewport.addEventListener('resize', setAppVh);
 function resizeCanvas(){
-  DPR = Math.max(1, Math.floor(window.devicePixelRatio || 1));
-  // Canvas CSS size handled by CSS; just set internal res & scaling
-  const cssW = canvas.clientWidth || 960;
-  const cssH = canvas.clientHeight || 540;
-  canvas.width = cssW * DPR;
+  // Use the element’s rendered size (after CSS sets height/width)
+  const rect = canvas.getBoundingClientRect();
+  const cssW = Math.max(1, Math.floor(rect.width));
+  const cssH = Math.max(1, Math.floor(rect.height));
+
+  const DPR = Math.max(1, Math.floor(window.devicePixelRatio || 1));
+  canvas.width  = cssW * DPR;
   canvas.height = cssH * DPR;
-  ctx.setTransform(DPR,0,0,DPR,0,0);
+
+  ctx.setTransform(DPR, 0, 0, DPR, 0, 0);
   ctx.imageSmoothingEnabled = true;
 }
+setAppVh();   // ensure var is set before first measurement
+resizeCanvas();
+addEventListener('resize', resizeCanvas);
 resizeCanvas(); addEventListener('resize', resizeCanvas);
 
 /* ===== UI refs ===== */
